--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>JB MART - Your Neighborhood Grocery Store</title>
- <link rel="stylesheet" href="../CSS/JB_Mart.css">
+ <link rel="stylesheet" href="JB_Mart.css">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
  <nav class="navbar">
   <div class="container">
    <a href="#" class="logo">
-    <img src="../Images/jb_mart.png" alt="JB MART Logo" class="logo-img">
+    <img src="jb_mart.png" alt="JB MART Logo" class="logo-img">
    </a>
    <ul class="nav-links">
     <li><a href="#home">Home</a></li>
@@ -27,7 +27,7 @@
     <li><a href="#contact">Contact</a></li>
    </ul>
    <div class="nav-actions">
-    <a href="../HTML/login_signup.html" class="btn btn-outline">Sign In</a>
+    <a href="login_signup.html" class="btn btn-outline">Sign In</a>
     <a href="#cart" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
    </div>
   </div>
@@ -50,7 +50,7 @@
    <h2 class="section-title">About JB MART</h2>
    <div class="about-content">
     <div class="about-image">
-     <img src="../Images/jayed.jpg" alt="JB MART Owner">
+     <img src="jayed.jpg" alt="JB MART Owner">
     </div>
     <div class="about-text">
      <p>Founded in 2025, JB MART is your friendly neighborhood grocery store committed to providing fresh, high-quality
@@ -312,7 +312,7 @@
   <div class="container">
    <div class="footer-grid">
     <div class="footer-col">
-     <img src="../Images/jb_mart.png" alt="JB MART Logo" class="footer-logo">
+     <img src="jb_mart.png" alt="JB MART Logo" class="footer-logo">
      <p>Fresh groceries at your doorstep</p>
     </div>
     <div class="footer-col">
