--- a/login_signup.html
+++ b/login_signup.html
@@ -5,15 +5,15 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>JB Mart - Login & Signup</title>
- <link rel="stylesheet" href="../CSS/login_signup.css">
- <link rel="icon" href="../Images/jb_mart.png" type="image/png">
+ <link rel="stylesheet" href="login_signup.css">
+ <link rel="icon" href="jb_mart.png" type="image/png">
 </head>
 
 <body>
  <div class="auth-container">
   <div class="form-box">
    <div class="logo">
-    <img src="../Images/jb_mart.png" alt="JB Mart Logo">
+    <img src="jb_mart.png" alt="JB Mart Logo">
     <h2>JB MART</h2>
    </div>
 
