--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
      <div class="product-image"
       style="background-image: url('https://images.unsplash.com/photo-1518977676601-b53f82aba655?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
-     <h3 class="product-title">Organic Carrots</h3>
+     <h3 class="product-title">Organic Potatoes</h3>
      <p class="product-price">$1.49/lb</p>
      <button class="btn btn-outline">Add to Cart</button>
     </div>
@@ -121,7 +121,7 @@
      <div class="product-image"
       style="background-image: url('https://images.unsplash.com/photo-1559181567-c3190ca9959b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
-     <h3 class="product-title">Bananas</h3>
+     <h3 class="product-title">Cherry</h3>
      <p class="product-price">$0.59/lb</p>
      <button class="btn btn-outline">Add to Cart</button>
     </div>
@@ -131,7 +131,7 @@
      <div class="product-image"
       style="background-image: url('https://images.unsplash.com/photo-1598170845058-32b9d6a5da37?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
-     <h3 class="product-title">Broccoli</h3>
+     <h3 class="product-title">Carrots</h3>
      <p class="product-price">$1.99/lb</p>
      <button class="btn btn-outline">Add to Cart</button>
     </div>
@@ -151,7 +151,7 @@
      <div class="product-image"
       style="background-image: url('https://images.unsplash.com/photo-1603569283847-aa295f0d016a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
-     <h3 class="product-title">Organic Pasta</h3>
+     <h3 class="product-title">Organic Fruits</h3>
      <p class="product-price">$3.29/pack</p>
      <button class="btn btn-outline">Add to Cart</button>
     </div>
@@ -170,7 +170,7 @@
       style="background-image: url('https://images.unsplash.com/photo-1603569283847-aa295f0d016a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
      <div class="deal-content">
-      <h3>Organic Pasta</h3>
+      <h3>Organic Fruits</h3>
       <div class="price-container">
        <span class="original-price">$3.29</span>
        <span class="deal-price">$2.49</span>
@@ -185,7 +185,7 @@
       style="background-image: url('https://images.unsplash.com/photo-1518977676601-b53f82aba655?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
      </div>
      <div class="deal-content">
-      <h3>Organic Carrots</h3>
+      <h3>Organic Potatoes</h3>
       <div class="price-container">
        <span class="original-price">$1.49</span>
        <span class="deal-price">$0.99</span>
@@ -286,9 +286,9 @@
     </form>
     <div class="contact-info">
      <h3>Store Information</h3>
-     <p><i class="fas fa-map-marker-alt"></i> 123 Grocery Street, Foodville, FC 12345</p>
-     <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-     <p><i class="fas fa-envelope"></i> info@jbmart.com</p>
+     <p><i class="fas fa-map-marker-alt"></i> 2 no Gate ,Daffodil International University,Ashulia , Savar , Dhaka</p>
+     <p><i class="fas fa-phone"></i> 01879944516</p>
+     <p><i class="fas fa-envelope"></i> jbmart1640@jbmart.com</p>
      <p><i class="fas fa-clock"></i> Open 7 days a week: 8:00 AM - 9:00 PM</p>
     </div>
    </div>
