--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <nav class="navbar">
   <div class="container">
    <a href="#" class="logo">
-    <img src="jb_mart.png" alt="JB MART Logo" class="logo-img">
+    <img src="png.png" alt="JB MART Logo" class="logo-img">
    </a>
    <ul class="nav-links">
     <li><a href="#home">Home</a></li>
